Issues with vertical alignment are still occurring in tables. The tbody,tfoot,thead elements have been commented out of the reset.css and added to the basestyles.css without the vertical-align. Added a default vertical-align for tbody,thead,tfoot of middle and restored bold font-weight to th.

--- a/wdn/templates_3.0/css/content/basestyles.css
+++ b/wdn/templates_3.0/css/content/basestyles.css
@@ -85,10 +85,16 @@ big {
 small {
 	font-size: smaller;
 }
-tr, th, td {
+tbody, tfoot, thead, tr, th, td {
 	margin: 0;
     padding: 0;
     border: 0;
     font-size: 100%;
     font: inherit;
+}
+th {
+	font-weight: bold;
+}
+tbody, tfoot, thead {
+	vertical-align: middle;
 }
